testsuite/gnatprove/tests/V726-024__pretty_output/test.out
 error: instantiation error at line 12
--> main.adb:21:04
   21 |       procedure Q is new P (X);
      |       ^
      + component of anonymous access type is not allowed in SPARK (SPARK RM 3.10)
      + violation of aspect SPARK_Mode at line 1
    1 |    procedure Main with SPARK_Mode is
      |                        ^

 error: instantiation error at line 15
--> main.adb:21:04
   21 |       procedure Q is new P (X);
      |       ^
      + "T" is not allowed in SPARK (due to component of anonymous access type)
      + violation of aspect SPARK_Mode at line 1
    1 |    procedure Main with SPARK_Mode is
      |                        ^

 error: instantiation error at line 17
--> main.adb:21:04
   21 |       procedure Q is new P (X);
      |       ^
      + "T" is not allowed in SPARK (due to component of anonymous access type)
      + violation of aspect SPARK_Mode at line 1
    1 |    procedure Main with SPARK_Mode is
      |                        ^
gnatprove: error during flow analysis and proof
